fix scss vars message list jump to bottom button

--- a/scss/message/_message-list.scss
+++ b/scss/message/_message-list.scss
@@ -18,23 +18,23 @@
     $marginRight: 10px;
 
     position: relative;
-    left: calc(100% - $width - $marginRight);
-    top: -(+ $marginBottom);
+    left: calc(100% - #{$width} - #{$marginRight});
+    top: -($heightUnreadCounter + $heightJumpToBottomButton + $marginBottom);
     height: $heightUnreadCounter + $heightJumpToBottomButton;
     width: $width;
     .counter {
       position: relative;
       z-index: 10;
 
-      width: 30px;
-      height: 30px;
+      width: $heightUnreadCounter;
+      height: $heightUnreadCounter;
 
       margin: 0 auto;
       border-radius: 100%;
 
       background-color: var(--colorPrimary);
       color: white;
-      line-height: 30px;
+      line-height: $heightUnreadCounter;
       text-align: center;
     }
 
@@ -42,12 +42,12 @@
       position: relative;
       z-index: 8;
 
-      height: $heightUnreadCounter;
+      height: $heightJumpToBottomButton;
       margin: 0 auto;
       margin-top: -10px;
       width: $width;
 
-      line-height: $heightUnreadCounter;
+      line-height: $heightJumpToBottomButton;
       background-color: white;
       border-radius: 100%;
 
